# opencv-x

./: README.md
1_LoadImage/: CMakeLists.txt  loadImage.cpp  run.sh
2_Pixels/: CMakeLists.txt  README.md  addImages.cpp  colorReduce.cpp  contrast.cpp  remapping.cpp  run.sh  saltImage.cpp
3_Colors/: CMakeLists.txt  huesaturation.cpp
4_Hist/: colorhistogram.h  histogram.h  histograms.cpp  integral.h
4_Hist/images/: retrieve.cpp
AlphaBlending/: CMakeLists.txt  alphaBlend.cpp  alphaBlend.py
FaceSwap/: faceSwap-1.py  faceSwap.py
SeamlessCloning/: normal_versus_mixed_clone.py  seamlessCloning.py
Tutorial/: README.md
Tutorial/1_LoadImage/: run.sh
Tutorial/3_Colors/: colorDetection.cpp  extractObject.cpp
Tutorial/4_Hist/: CMakeLists.txt  contentFinder.cpp  contentFinder.h  finder.cpp  imageComparator.h  integral.cpp  retrieve.cpp  tracking.cpp
test/: 1_test.py
